force-app/main/default/objects/C360_SalesArea__c.object
<CustomObject>
    <fields>
        <fullName>AccountAssignmentGroup__c</fullName>
        <label>Account Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Domestic Revenues</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Foreign Revenues</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Affiliat Comp Revenu</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Business Area Revenu</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Area</relationshipLabel>
        <relationshipName>Sales_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationCode__c</fullName>
        <label>Application Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDesc__c</fullName>
        <label>Application Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <formula>IF (ApplicationCode__c = Null || ApplicationDesc__c= Null ,&quot;&quot;,ApplicationCode__c &amp;&quot;=&quot;&amp; ApplicationDesc__c)</formula>
        <label>Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <description>Invoice Customer</description>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingNumber__c</fullName>
        <description>Invoice Customer</description>
        <label>Billing Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingType__c</fullName>
        <description>Invoice Customer</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z1CD</fullName>
                    <label>Crude Inv./Tax Inv.</label>
                </value>
                <value>
                    <fullName>Z1DP</fullName>
                    <label>Deposit Invoice</label>
                </value>
                <value>
                    <fullName>Z1IF</fullName>
                    <label>Final Invoice</label>
                </value>
                <value>
                    <fullName>Z1OT</fullName>
                    <label>Other Invoice</label>
                </value>
                <value>
                    <fullName>Z2F2</fullName>
                    <label>Invoice/Tax Inv. TPX</label>
                </value>
                <value>
                    <fullName>Z2OT</fullName>
                    <label>Other Invoice TPX</label>
                </value>
                <value>
                    <fullName>Z3CD</fullName>
                    <label>Crude Inv/TaxInv TLB</label>
                </value>
                <value>
                    <fullName>Z3DP</fullName>
                    <label>Deposit Invoice TLB</label>
                </value>
                <value>
                    <fullName>Z3F2</fullName>
                    <label>Invoice/Tax Inv. TLB</label>
                </value>
                <value>
                    <fullName>Z3IF</fullName>
                    <label>Final Invoice TLB</label>
                </value>
                <value>
                    <fullName>Z3OT</fullName>
                    <label>Other Invoice TLB</label>
                </value>
                <value>
                    <fullName>Z3V1</fullName>
                    <label>Commercial Serv. TLB</label>
                </value>
                <value>
                    <fullName>Z4EX</fullName>
                    <label>TX Export Invoice</label>
                </value>
                <value>
                    <fullName>Z4IN</fullName>
                    <label>TX Domestic Invoice</label>
                </value>
                <value>
                    <fullName>Z5IN</fullName>
                    <label>TSV Tax Invoice</label>
                </value>
                <value>
                    <fullName>Z6F2</fullName>
                    <label>Invoice/Tax Inv. LAB</label>
                </value>
                <value>
                    <fullName>Z6IF</fullName>
                    <label>Final Invoice LAB</label>
                </value>
                <value>
                    <fullName>Z6OT</fullName>
                    <label>Other Invoice LAB</label>
                </value>
                <value>
                    <fullName>Z6V1</fullName>
                    <label>Commercial Serv. LAB</label>
                </value>
                <value>
                    <fullName>Z1IV</fullName>
                    <label>Invoice/Tax Invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlockStatus__c</fullName>
        <label>Block Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Overall block</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Test block</label>
                </value>
                <value>
                    <fullName>T1</fullName>
                    <label>Customer incompleted</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>All free of charge</label>
                </value>
                <value>
                    <fullName>test (e)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyNumber__c</fullName>
        <formula>AccountNumber__r.AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditControlArea__c</fullName>
        <label>Credit Control Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CreditControlArea</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustPriceProc__c</fullName>
        <label>Cust.pric.proc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CustPriceProc</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustStatGroup__c</fullName>
        <label>Cust.Stat.Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CustStatGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup1__c</fullName>
        <label>Customer Group1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>GR1</fullName>
                    <label>GR1=Customer Grp1</label>
                </value>
                <value>
                    <fullName>Y01</fullName>
                    <label>Y01=Excise 01-46</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>Z1=Uncontrolled excise</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup2__c</fullName>
        <label>Customer Group2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>GR2</fullName>
                    <label>GR2=Customer Grp2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup3__c</fullName>
        <label>Customer Group3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>GR3</fullName>
                    <label>GR3	Customer Grp3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPayment__c</fullName>
        <label>Customer Payment Guarantee Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZA01</fullName>
                    <label>ZA01- Low Risk (Open)</label>
                </value>
                <value>
                    <fullName>ZA02</fullName>
                    <label>ZA02- Low Risk (Parent Guarantee)</label>
                </value>
                <value>
                    <fullName>ZB01</fullName>
                    <label>ZB01-Medium Risk (Credit Limit)</label>
                </value>
                <value>
                    <fullName>ZB02</fullName>
                    <label>ZB02-Medium Risk (Credit Limit Group)</label>
                </value>
                <value>
                    <fullName>ZC01</fullName>
                    <label>ZC01-High Risk (Advance Payment)</label>
                </value>
                <value>
                    <fullName>ZC02</fullName>
                    <label>ZC02-High Risk (Collateral)</label>
                </value>
                <value>
                    <fullName>ZC03</fullName>
                    <label>ZC03-High Risk (Export Cash)</label>
                </value>
                <value>
                    <fullName>ZC04</fullName>
                    <label>ZC04-High Risk (Export L/C)</label>
                </value>
                <value>
                    <fullName>ZC05</fullName>
                    <label>ZC05-High Risk (Cash&amp;Credit)</label>
                </value>
                <value>
                    <fullName>ZC06</fullName>
                    <label>ZC06-High Risk (Credit Limit)</label>
                </value>
                <value>
                    <fullName>ZC07</fullName>
                    <label>ZC07-High Risk (Cash)</label>
                </value>
                <value>
                    <fullName>ZI01</fullName>
                    <label>ZI01-TOP Group</label>
                </value>
                <value>
                    <fullName>0001</fullName>
                    <label>(Don&apos;t Use) Letters of credit</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>(Don&apos;t Use) Payment cards</label>
                </value>
                <value>
                    <fullName>ZDUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerTypeCode__c</fullName>
        <label>Customer Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTypeDesc__c</fullName>
        <label>Customer Type Desc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>END CONSUMER</fullName>
                </value>
                <value>
                    <fullName>Not assigned</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
                <value>
                    <fullName>WHOLESALE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <formula>IF (CustomerTypeCode__c = Null ||  ISPICKVAL(CustomerTypeDesc__c,&quot;&quot;)  ,&quot;&quot;,CustomerTypeCode__c &amp;&quot;=&quot;&amp;  TEXT( CustomerTypeDesc__c ) )</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPlant__c</fullName>
        <label>Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DeliveryPlant</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryPriority__c</fullName>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DeliveryPriority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExchangeRateType__c</fullName>
        <label>Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100* = Reference value = group value</fullName>
                </value>
                <value>
                    <fullName>1001 = Current exchange rate</fullName>
                </value>
                <value>
                    <fullName>1002 = Average exchange rate</fullName>
                </value>
                <value>
                    <fullName>EURO = EMU reguration, fixed exchange rate</fullName>
                </value>
                <value>
                    <fullName>Z1 = Standard translation for Hard Curr. (VN)</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <description>Incoterms 2</description>
        <label>Incoterms 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndustryCode__c</fullName>
        <label>Industry Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndustryDesc__c</fullName>
        <label>Industry Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>IF(
    OR(
        OR(ISBLANK(IndustryCode__c), IndustryCode__c = &quot;&quot;),
        OR(ISBLANK(IndustryDesc__c), IndustryDesc__c = &quot;&quot;)
    ),
    &quot;&quot;,
    IndustryCode__c &amp;&quot; = &quot;&amp; IndustryDesc__c
)</formula>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterGroup__c</fullName>
        <label>Inter Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InterGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPriceDetermin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price determin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Sales area External id</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestBlockingDate__c</fullName>
        <label>Latest Blocking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestReEvaluationDate__c</fullName>
        <label>Latest Re-Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxPartialDeliveries__c</fullName>
        <label>Max Partial Deliveries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextReEvaluationDate__c</fullName>
        <label>Next Re-Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumDays__c</fullName>
        <formula>IF(
        AND(ISBLANK(PODate__c), NOT(ISBLANK(BillingDate__c))),
        TODAY() - BillingDate__c,
        IF(
                AND(NOT(ISBLANK(PODate__c)), ISBLANK(BillingDate__c)),
                TODAY() - PODate__c,
                IF(
                        AND(NOT(ISBLANK(PODate__c)), NOT(ISBLANK(BillingDate__c))),
                        IF(
                                PODate__c &gt; BillingDate__c,
                                TODAY() - PODate__c,
                                TODAY() - BillingDate__c
                        ),
                        0
                )
        )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderCombination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Combination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderProbability__c</fullName>
        <label>Order Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverdeliveryTolerance__c</fullName>
        <label>Overdelivery Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <description>Invoice Customer</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <description>Invoice Customer</description>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartialDeliveriesperitem__c</fullName>
        <label>Partial Deliveries per item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PartialDeliveriesperitem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartialDeliveryitem__c</fullName>
        <label>Partial Delivery/item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank</fullName>
                    <label>Partial delivery allowed</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Create a delivery with qty greater than zero</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Create only one delivery (also with quantity = 0)</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Only complete delivery allowed</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>No limit to subsequent deliveries</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentGuaranteeProcedure__c</fullName>
        <label>Payment Guarantee Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentGuaranteeProcedure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceGroup__c</fullName>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z1</fullName>
                    <label>Z1 = Major Oil</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>Z2 = 3rd Party</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>Z3 = Related</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Z4</fullName>
                </value>
                <value>
                    <fullName>Z5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricelist__c</fullName>
        <label>Price list</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 = Combine Invoice</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 = Split invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricingProcedure__c</fullName>
        <label>Pricing Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 = Standard</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 = Stand Incl Sales Tax</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 = Refund</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 = Bunker</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 = GTM Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RawDataBI__c</fullName>
        <description>RawData from BI</description>
        <label>RawDataBI</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesDistrict__c</fullName>
        <label>Sales District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesDistrict</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesGroup__c</fullName>
        <description>Sales Group</description>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingCondition__c</fullName>
        <description>Shipping Condition</description>
        <label>Shipping Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingConditions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingConditions__c</fullName>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingConditions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubIndustryCode__c</fullName>
        <label>SubIndustry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubIndustryDesc__c</fullName>
        <description>SubIndustry Desc</description>
        <label>SubIndustry Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <formula>IF (SubIndustryCode__c = Null  || SubIndustryDesc__c = Null ,&quot;&quot;,SubIndustryCode__c &amp;&quot;=&quot;&amp; SubIndustryDesc__c)</formula>
        <label>Sub Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPCustomerGroup__c</fullName>
        <label>TOP Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PT-GROUP</fullName>
                </value>
                <value>
                    <fullName>SHELL-FZ</fullName>
                </value>
                <value>
                    <fullName>CHEVRON-FZ</fullName>
                </value>
                <value>
                    <fullName>PTTOR-FZ</fullName>
                </value>
                <value>
                    <fullName>SHELL-EX</fullName>
                </value>
                <value>
                    <fullName>CHEVRON-EX</fullName>
                </value>
                <value>
                    <fullName>PTTOR-EX</fullName>
                </value>
                <value>
                    <fullName>CG001</fullName>
                    <label>ALCAN GROUP</label>
                </value>
                <value>
                    <fullName>CG002</fullName>
                    <label>BASF GROUP</label>
                </value>
                <value>
                    <fullName>CG003</fullName>
                    <label>BRIDGESTONE GROUP</label>
                </value>
                <value>
                    <fullName>CG004</fullName>
                    <label>CAP</label>
                </value>
                <value>
                    <fullName>CG005</fullName>
                    <label>CUSTOMER</label>
                </value>
                <value>
                    <fullName>CG006</fullName>
                    <label>IRPC</label>
                </value>
                <value>
                    <fullName>CG007</fullName>
                    <label>MING DHI GROUP</label>
                </value>
                <value>
                    <fullName>CG008</fullName>
                    <label>NANPAO GROUP</label>
                </value>
                <value>
                    <fullName>CG009</fullName>
                    <label>NIPPON GROUP</label>
                </value>
                <value>
                    <fullName>CG010</fullName>
                    <label>PTT GROUP</label>
                </value>
                <value>
                    <fullName>CG011</fullName>
                    <label>PTTEP GROUP</label>
                </value>
                <value>
                    <fullName>CG012</fullName>
                    <label>PTTGC GROUP</label>
                </value>
                <value>
                    <fullName>CG013</fullName>
                    <label>PTTOR</label>
                </value>
                <value>
                    <fullName>CG014</fullName>
                    <label>SAKC</label>
                </value>
                <value>
                    <fullName>CG020</fullName>
                    <label>SCG GROUP</label>
                </value>
                <value>
                    <fullName>CG015</fullName>
                    <label>SHELL GROUP</label>
                </value>
                <value>
                    <fullName>CG016</fullName>
                    <label>TOA GROUP</label>
                </value>
                <value>
                    <fullName>CG017</fullName>
                    <label>TOP GROUP</label>
                </value>
                <value>
                    <fullName>CG018</fullName>
                    <label>TS GROUP</label>
                </value>
                <value>
                    <fullName>CG019</fullName>
                    <label>UBONBIO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermofPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term of Payment</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Payment Term</value>
            </filterItems>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>None</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Sales Area</relationshipLabel>
        <relationshipName>Sales_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnderdeliveryTolerance__c</fullName>
        <label>Underdelivery Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Sales Area Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>